sort.basic.cocktail.AlgCocktailSort3.scala.error
Erreur de compilation :
AlgCocktailSort3:5: error: not found: value getNombreValeur
  var n = getNombreValeur()
          ^